updating GitHub pipeline

--- a/.github/actions/create-test-report/action.yml
+++ b/.github/actions/create-test-report/action.yml
@@ -44,6 +44,7 @@ runs:
         path: |
           test-results.xml
           mochawesome.json
+          mochawesome.html
 
     - name: Create test report
       uses: phoenix-actions/test-reporting@v15
