--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ on:
 env:
   DOTNET_CLI_TELEMETRY_OPTOUT: 1 
   DOTNET_NOLOGO: 1
+  node: 20
 
 jobs:
   build:
@@ -34,7 +35,8 @@ jobs:
       - name: Setup env
         uses: ./.github/actions/setup-env
         with:
-          node: ${{ inputs.build-version }}
+          node: ${{ env.node }}
+          # node: ${{ inputs.build-version }}
           os: windows-2022
 
       - name: Get latest Node.js version for v${{ inputs.build-version }}
@@ -131,7 +133,8 @@ jobs:
       - name: Setup env
         uses: ./.github/actions/setup-env
         with:
-          node: ${{ inputs.build-version }}
+          # node: ${{ inputs.build-version }}
+          node: ${{ env.node }}
           os: ${{ matrix.os }}
 
       - name: Download artifacts
@@ -155,7 +158,7 @@ jobs:
           result-encoding: string
           script: |
             try {
-              var arch = ${{ runner.arch }}
+              var arch = '${{ runner.arch }}'
               return arch.toLowerCase();
             } catch(err) {
               core.setFailed(err)
