--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       matrix:
         os: [macos-13, macos-14, ubuntu-22.04, windows-2022]
         # os: [macos-14, windows-2022]
-        node: [18, 20, 22]
+        node: [18, 20, 22, 23]
 
     steps:
 
