--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,10 @@
 name: Test
 
 on: 
+  pull_request:
+    types: [opened, reopened, edited]
+    branches-ignore:
+      - 'circleci'
   push:
     branches-ignore:
       - 'circleci'
