--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ on:
       - 'performance/*'
       - '.github/FUNDING.YML'
       - '.github/workflows/build.yml'
+      - '.github/workflows/build*.yml'
+      - '.github/actions/test-build/action.yml'
+      - '.github/actions/build*/*.*'
+      - '.github/actions/build/*.*'
       - '**/*.md'
       - '**/*.d.ts'
       - '**/*.bat'
@@ -39,6 +43,10 @@ on:
       - 'performance/*'
       - '.github/FUNDING.YML'
       - '.github/workflows/build.yml'
+      - '.github/workflows/build*.yml'
+      - '.github/actions/test-build/action.yml'
+      - '.github/actions/build*/*.*'
+      - '.github/actions/build/*.*'
       - '**/*.md'
       - '**/*.d.ts'
       - '**/*.bat'
